尝试修正yml格式问题

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,6 @@ script:
 - hexo generate
 
 after_success:
-- sed -i -e "s/repo:\shttps:\/\/repo/repo:\shttps:\/\/${GH_TOKEN}@github.com\/wecode-today\/wecode-today.github.io.git/" _config.yml
+- sed -i -e "s/repo:\shttps:\/\/repo/repo:\ https:\/\/${GH_TOKEN}@github.com\/wecode-today\/wecode-today.github.io.git/" _config.yml
 - cat _config.yml
 - hexo deploy
